--- a/templates/base_login.html
+++ b/templates/base_login.html
@@ -17,7 +17,7 @@
 <!--[if gt IE 8]><!--> <html class="no-js" lang=""> <!--<![endif]-->
     <head>
         <meta charset="utf-8">
-        <title>A la découverte de l'art culinaire togolais</title>
+        <title>{% block head_title %}{% trans "TogoKuizine: A la découverte de l'art culinaire togolais" %}{% endblock %}</title>
         <meta name="application-name" content="TogoKuizine">
         <meta name="description" content="Nous sommes une communauté de passionnés de cuisine réunis sur une  même plateforme pour partager recettes, astuces, événements et informations sur la gastronomie togolaise">
         <meta name="viewport" content="width=device-width, initial-scale=1">
