--- a/templates/blog/post_list.html
+++ b/templates/blog/post_list.html
@@ -5,12 +5,13 @@
 {% load humanize %}
 {% load comments %}
 {% load social_share %}
+{% block head_title %}{% trans "Astuces-Santé-Découverte" %}{% endblock %}
 
 
 {% block slide %}
 	 <section id="home" class="home">
         
-        <img src="{% static 'assets/images/top-blog.jpg' %}">
+        <img src="{% static 'assets/images/top-blog.jpg' %}" width="100%">
         
                        
     </section>
