--- a/templates/recipe/recipe_box_user.html
+++ b/templates/recipe/recipe_box_user.html
@@ -10,7 +10,7 @@
    <section id="home" class="home">
 
     
-        <img src="{% static 'assets/images/top-header.jpg' %}">
+        <img src="{% static 'assets/images/top-header.jpg' %}" width="100%">
                                     
     </section>
    
