--- a/templates/restaurant/restaurant_list.html
+++ b/templates/restaurant/restaurant_list.html
@@ -4,6 +4,7 @@
 {% load thumbnail %}
 {% load comments %}
 {% load ratings %}
+{% block head_title %}{% trans "Bonnes adresses %}{% endblock %}
 
 {% block slide %}
 
@@ -17,7 +18,7 @@
                             <div class="single_home_slider">
                                 <div class="main_home wow"> -->
                                     <!-- <h1>Cook' iT</h1> -->
-                                    <img src="{% static 'assets/images/top-adresse.jpg' %}">
+                                    <img src="{% static 'assets/images/top-adresse.jpg' %}" width="100%"">
                                     <!-- <p class="subtitle">Découvir, Cuisiner, Savourer</p>
 
                                     <div class="home_btn">
