--- a/templates/base.html
+++ b/templates/base.html
@@ -20,7 +20,9 @@
 <!--[if gt IE 8]><!--> <html class="no-js" lang=""> <!--<![endif]-->
     <head>
         <meta charset="utf-8">
-        <title>TogoKuizine: A la découverte de l'art culinaire togolais</title>
+        <title>{% block head_title %}{% trans "TogoKuizine: A la découverte de l'art culinaire togolais" %}{% endblock %}
+
+        </title>
         <meta name="application-name" content="TogoKuizine">
         <meta name="description" content="Nous sommes une communauté de passionnés de cuisine réunis sur une  même plateforme pour partager recettes, astuces, événements et informations sur la gastronomie togolaise">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -337,9 +339,9 @@
 
                                     <li><a href="{% url 'contributors' %}">Nos contributeurs</a></li>
                                     <li><a href="">Nos partenaires</a></li>
-                                    <li><a>Conditions générales d'utilisation</a></li>
+                                    <li><a href="{% url 'mentions' %}">Mentions légales</a></li>
 
-                                    <li><a href="">Règles de confidentialité</a></li>
+                                  
                                    
                                 </ul>
 
