--- a/templates/recipe/recipe_add.html
+++ b/templates/recipe/recipe_add.html
@@ -3,12 +3,13 @@
 {% load thumbnail %}
 {% load i18n %}
 {% load widget_tweaks %}
+{% block head_title %}{% trans "Ajouter une recette" %}{% endblock %}
 
 {% block slide %}
 
     <section id="home" class="home">
 
-        <img src="{% static 'assets/images/top-header.jpg' %}">
+        <img src="{% static 'assets/images/top-header.jpg' %}" width="100%">
 
     </section>
 
