--- a/templates/base.html
+++ b/templates/base.html
@@ -51,11 +51,11 @@
         <link rel="stylesheet" href="{% static 'assets/css/select2.min.css' %}">
 
         <!--Theme Responsive css-->
-        <link rel="stylesheet" href="{% static 'assets/css/responsive.css' %}" />
         <link rel="stylesheet" href="{% static 'assets/css/animate.css' %}" />
 
         <!--font family css-->
-       
+        <link href="{% static 'assets/fonts/circular-std/style.css' %}" rel="stylesheet">
+
        
        
 
