--- a/templates/restaurant/restaurant_list.html
+++ b/templates/restaurant/restaurant_list.html
@@ -4,7 +4,7 @@
 {% load thumbnail %}
 {% load comments %}
 {% load ratings %}
-{% block head_title %}{% trans "Bonnes adresses %}{% endblock %}
+{% block head_title %}{% trans "Bonnes adresses" %}{% endblock %}
 
 {% block slide %}
 
