--- a/gastronomie/static/assets/css/style.css
+++ b/gastronomie/static/assets/css/style.css
@@ -13,14 +13,14 @@ html,
 body {
     
     background-color: #efeff6;
-    font-size: 1rem;
     color: #525658;
     width: 100%;
     padding: 0;
     margin-left: 0;
     margin-right: 0;
-    font-family: 'PT Sans', Helvetica, Arial, sans-serif;
+    font-family: 'PT Sans', Helvetica';
     font-weight: 300;
+    font-size: 14px;
 }
 hr{
     margin-top: 10px;
@@ -170,8 +170,8 @@ h6 {
     margin-bottom: .9rem;
 }
 p {
-    line-height: 1.375rem;
-    font-size: 0.95rem;
+    line-height: 1.8rem;
+    font-size: 14px;
     text-align: justify;
     
 }
@@ -1697,7 +1697,7 @@ blockquote footer, blockquote small, blockquote .small {
 .rp-post-time{
     border: 1px solid #ededed;
     padding: 11px 16px;
-    margin-bottom: 26px; 
+    margin-bottom: 20px; 
 }
 
 .rp-post-time strong{
@@ -1709,6 +1709,7 @@ blockquote footer, blockquote small, blockquote .small {
 .rp-post-description{
     margin-bottom: 20px;
 }
+
 
 
 .rp-post-instruction h5{
@@ -1740,12 +1741,14 @@ blockquote footer, blockquote small, blockquote .small {
     top: 0px;
 }
 
-.rp-post-instruction .rp-bloc-note ul >li:before{
-    font-family: 'FontAwesome';
-    content: "";
-    width: 20px;
-    display: inline-block;
+.rp-bloc-note >ul>li{
+    list-style: square;
+        line-height: 1.8rem;
 }
+.rp-post-step{
+    padding-right: 10px;
+}
+
 .rp-post-step > ol {
     counter-reset: count;
     line-height: normal;
@@ -1761,8 +1764,9 @@ blockquote footer, blockquote small, blockquote .small {
     position: relative;
     line-height: 1.8;
     min-height: 44px;
-    padding-left: 60px;
-    margin: 0 0 40px;
+    padding-left: 30px;
+    margin: 0 0 30px;
+    text-align: justify;
 }
 
 .rp-post-step > ol > li:before {
@@ -1772,13 +1776,13 @@ blockquote footer, blockquote small, blockquote .small {
     position: absolute;
     top: 0;
     left: 0;
-    font-size: 22px;
+    font-size: 16px;
     font-weight: bold;
     text-transform: uppercase;
     text-align: center;
-    line-height: 1.9;
-    width: 46px;
-    height: 46px;
+    line-height: 2;
+    width: 36px;
+    height: 36px;
     vertical-align: middle;
     padding: 0;
     -webkit-border-radius: 50%;
@@ -1787,7 +1791,7 @@ blockquote footer, blockquote small, blockquote .small {
     transition: box-shadow .25s;
     box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
     border-color: #fff;
-    margin-right: 50px;
+    margin-left: -18px;
     color: #fff;
     background-color: #f6c23a;
 }
@@ -2556,8 +2560,9 @@ iframe{
         margin:50px 0px;
     }
     .rp-post-instruction h5 {
-        text-align: center;
+        padding-left: 15px;
         padding-bottom: 10px;
+        padding-top: 10px;
     }
 
     .carousel-caption h1 {
@@ -2582,8 +2587,9 @@ iframe{
     }
     
     .rp-post-instruction h5 {
-        text-align: center;
-        padding-bottom: 10px;
+         padding-bottom: 10px;
+        padding-left: 15px;
+        padding-top: 10px;
     }
     .footer_logo, .footer_title{
         text-align: center;
@@ -2606,8 +2612,9 @@ iframe{
     }
 
     .rp-post-instruction h5 {
-        text-align: center;
+         padding-top: 10px;
         padding-bottom: 10px;
+        padding-left: 15px;
     }
 
     .footer_logo, .footer_title{
@@ -2668,5 +2675,10 @@ iframe{
       }
       .side-collapse.in {
           width:0;
+      }
+
+
+      .margin-top-40{
+        margin-top: 20px;
       }
   }
