--- a/templates/recipe/recipe_detail.html
+++ b/templates/recipe/recipe_detail.html
@@ -220,7 +220,7 @@
             
             <div class="col-md-9 rp-post-instruction"> 
                  
-                <h5 class="text-center">Instructions</h5>
+                <h5>Instructions</h5>
                 
                 <div class="rp-post-step">
                           
