--- a/templates/recipe/recipe_list.html
+++ b/templates/recipe/recipe_list.html
@@ -5,14 +5,12 @@
 {% load embed_video_tags %}
 {% load comments %}
 {% load i18n %}
-{% block head_title %}{% trans "Nos recettes" %}{% endblock %}
+{% block head_title %}{% trans "Recettes" %}{% endblock %}
 {% block slide %}
 <section id="home" class="home">
 
-
     <img src="{% static 'assets/images/top-recette.jpg' %}" width="100%">
-       
-                                   
+                                  
 </section>
 
 {% endblock slide %}
