--- a/templates/userprofile/staff_list.html
+++ b/templates/userprofile/staff_list.html
@@ -1,6 +1,7 @@
 {% extends 'base_admin.html' %}   
 {% load staticfiles %}
 {% load i18n %}
+{% trans 'L équipe' %}
 {% block content %}
 
 <div class="container-fluid  dashboard-content">
