--- a/templates/video/video_list.html
+++ b/templates/video/video_list.html
@@ -5,7 +5,7 @@
 {% load embed_video_tags %}
 {% load comments %}
 {% load i18n %}
-{% block head_title %}{% trans "Nos vidéos" %}{% endblock %}
+{% block head_title %}{% trans "Vidéos" %}{% endblock %}
 
 {% block slide %}
 <section id="home" class="home">
