--- a/templates/base.html
+++ b/templates/base.html
@@ -168,7 +168,12 @@
                 </li>
 
                 <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-user"></i> {{ request.user.username }} <b class="caret"></b></a>
+                        
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+
+
+                                <i class="fa fa-user"></i>
+                     {{ request.user.username }} <b class="caret"></b></a>
 
                     <ul class="dropdown-menu">
 
