--- a/templates/search/search.html
+++ b/templates/search/search.html
@@ -45,8 +45,10 @@
 
   {% block content %}
 
-
   <div class="main_mix_content">
+  
+  <div class="search-content">
+    <h2>Recherche</h2>
 
   <hr>
     {{total_results}} resultats pour: {{word}}  
@@ -74,13 +76,11 @@
                         {% endvideo %}
                       </a>
                     {% endif %} 
-                    
-                        
                         
                 </div>
                 <div class="col-sm-8">
                    
-                    <h4 class="rp-post-title"><a href="">{{order.title}}</a></h4>
+                    <h4 class="rp-post-title">{{order.title}}</h4>
 
                     <div class="rp-post-meta-info">
                        <ul class="list-inline">
@@ -151,6 +151,7 @@
       </ul>
       {% endif %}
 {% endif %}
+</div>
     
 </div>
 
