--- a/templates/userprofile/contributors.html
+++ b/templates/userprofile/contributors.html
@@ -4,6 +4,7 @@
 {% load i18n %}
 {% load thumbnail %}
 {% load comments %}
+{% block head_title %}{% trans 'Contributeurs' %}{% endblock %}
 
 
 {% block slide %}
@@ -40,9 +41,8 @@
 {% block header %}
 
     <section class="rp-post-header margin-top-40">
-        <h4 class="rp-post-title h4-responsive">{% trans 'Nos contributeurs' %}</h4> 
-        <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                                tempor incididunt ut labore et dolore magna aliqua. </p>
+        <h4 class="rp-post-title h4-responsive">{% trans 'Nos chefs cuistos' %}</h4> 
+        <p class="text-center">Vous etes passionné(e)s de cuisine? Vous avez envie de partager votre art culinaire avec d'autres personnes? <b>Rejoignez la communauté!<b></p>
     </section>
 
 {% endblock header %}
@@ -64,6 +64,7 @@
                             <div class="card">
                                 <div class="card-body text-center">
                                     <p>
+
                                         {% if user.profile.photo %}
                                         <img class="img-fluid" src="{{user.profile.photo.url}}" width="" alt="contributor image">
                                         {% else %}
@@ -73,7 +74,10 @@
                                     </p>
                                     <h5 class="cook-first-color">{% if user.last_name %}{{user.first_name}} {{user.last_name}} 
                                     {% else %} {{user.username}} {% endif %}</h5>
-                                    <small></small>
+                                    {% if user.profile.job %}
+
+                                    <small>{{user.profile.job}}</small>
+                                    {% endif %}
                                     <p class="card-text">{{user.profile.bio|truncatewords:15}}</p>
                                     
                                 </div>
