--- a/templates/video/video_detail.html
+++ b/templates/video/video_detail.html
@@ -10,7 +10,7 @@
 {% load social_share %}
 {% load i18n %}
 
-{% block head_title %}{% trans "Vidéo-" %}{{video.title}}{% endblock %}
+{% block head_title %}{{video.title}}{% endblock %}
 
 
 
@@ -104,7 +104,6 @@
                 {% post_to_twitter "{{video.title}}"  "" %}
 
                 <!--Gplus-->
-                {% post_to_gplus  "" %}
                 
             </div>
             
@@ -145,7 +144,6 @@
                 {% post_to_twitter "{{recipe.title}}"  "" %}
 
                 <!--Gplus-->
-                {% post_to_gplus  "" %}
 
             </div> 
         </div>   
