--- a/templates/base.html
+++ b/templates/base.html
@@ -73,7 +73,7 @@
                 
                 <a href="https://www.facebook.com/TogoKuizine-2180297015542613" target="blank" class="social-link"><i class="fa fa-facebook"></i></a>
                 <a href="https://twitter.com/TKuizine" class="social-link"><i class="fa fa-twitter"></i></a>
-                <a href="" class="social-link"><i class="fa fa-instagram"></i></a>
+                <a href="https://instagram.com/tg_kuizine" class="social-link"><i class="fa fa-instagram"></i></a>
                 <a href="https://www.youtube.com/channel/UC8YM-CIYn3tQjCOHEN2GUFA" target="blank"class="social-link"><i class="fa fa-youtube"></i></a>
                  
       
@@ -84,7 +84,7 @@
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                         <span class="nf-count"></span>
-                        <i class="fa fa-bell"></i> <b class="caret"></b>
+                        <i class="fa fa-bell"></i> <span class="indicator"></span><b class="caret"></b>
                     </a>
                     <ul class="dropdown-menu notification-box-list">
 
@@ -338,13 +338,12 @@
                                     <img src="{% static 'assets/images/finalTK2.png' %}"  width="50%" alt="logo TogoKuizine">
 
                                 </div>
-                                <ul class="">
-                                    <li><a href="{% url 'about' %}">A propos</a></li>
-                                    <li><a href="">L' équipe</a></li>
 
+                                <ul class="">
+                                    <li><a href="{% url 'about' %}">L'équipe</a></li>
                                     <li><a href="{% url 'contributors' %}">Nos contributeurs</a></li>
                                     <li><a href="">Nos partenaires</a></li>
-                                    <li><a href="{% url 'mentions' %}">Mentions légales</a></li>
+                                    <li><a href="{% url 'legacy' %}">Mentions légales</a></li>
 
                                   
                                    
@@ -422,7 +421,7 @@
                            
                             <a href="https://www.facebook.com/TogoKuizine-2180297015542613" target="blank"><i class="fa fa-facebook"></i></a>
                             <a href="https://twitter.com/TKuizine"><i class="fa fa-twitter" target="blank"></i></a>
-                            <a href=""><i class="fa fa-instagram" target="blank"></i></a>
+                            <a href="https://instagram.com/tg_kuizine"><i class="fa fa-instagram" target="blank"></i></a>
                             <a href="https://www.youtube.com/channel/UC8YM-CIYn3tQjCOHEN2GUFA" target="blank"><i class="fa fa-youtube"></i></a>
                         
                         </div>
