--- a/templates/recipe/recipe_detail.html
+++ b/templates/recipe/recipe_detail.html
@@ -200,7 +200,7 @@
         <div class="rp-post-description">
             
                 <p>
-                {{recipe.text}}
+                {{recipe.description}}
                 </p>
           
         </div>
