--- a/templates/account/verification_sent.html
+++ b/templates/account/verification_sent.html
@@ -17,6 +17,7 @@
         <div class="row ">
 
             <div class="col-md-offset-2 col-md-8 padding-20">
+                <div class="login">
 
 			    <h4>{% trans "Vérifier votre adresse e-mail" %}</h4>
 
@@ -25,9 +26,10 @@
 			    </p>
 			    
 			    <p>Consultez votre dossier de spams pour vérifier que le message envoyé ne s'y trouve pas. 
-				Si vous ne recevez toujours pas l'e-mail, veuillez nous <a href="">contacter</a>
+				Si vous ne recevez toujours pas l'e-mail, veuillez nous <a href="mailto:togokuizine@gmail.com">contacter</a>
 
 			    {% endblocktrans %}</p>
+                </div>
 			</div>  
         </div>  
     </div>
