--- a/templates/flatpages/default.html
+++ b/templates/flatpages/default.html
@@ -10,7 +10,7 @@
 
 <section id="home" class="home">
   
-    <img src="{% static 'assets/images/team.jpg' %}" width="100%">
+    <img src="{% static 'assets/images/top-team.jpg' %}" width="100%">
                                    
 </section>
 {% endblock %}
@@ -20,18 +20,10 @@
      <!-- Post -->
 
 
-    <div class="main_mix_content single_mixi">
+    <div class="main_mix_content single_mixi padding-20">
     
-  
-        <div class="mixcontent">
-      
-      
-       
-                <p>{{ flatpage.content }}</p>
-
-                
-
-        </div>
+        
+        <p>{{ flatpage.content }}</p>
 
     </div>
 
