--- a/templates/restaurant/restaurant_update.html
+++ b/templates/restaurant/restaurant_update.html
@@ -70,6 +70,28 @@
                             </div>
                             <div class="row">
                                 <div class="col-xs-12 col-md-6 col-lg-6">
+                                    <label for="id_title">{{form.fb_id.label}}:</label>
+                                    {{ form.fb_id }}
+                                </div>
+                                 <div class="col-xs-12 col-md-6 col-lg-6">
+                                    <label for="id_title">{{form.insta_id.label}}:</label><br>
+                                    {{ form.insta_id }}
+                                </div>
+                               
+                            </div>
+                             <div class="row">
+                                <div class="col-xs-12 col-md-6 col-lg-6">
+                                    <label for="id_title">{{form.twit_id.label}}:</label>
+                                    {{ form.twit_id }}
+                                </div>
+                                 <div class="col-xs-12 col-md-6 col-lg-6">
+                                    <label for="id_title">{{form.lind_id.label}}:</label><br>
+                                    {{ form.lind_id }}
+                                </div>
+                               
+                            </div>
+                            <div class="row">
+                                <div class="col-xs-12 col-md-6 col-lg-6">
                                     <label for="id_title">{{form.web_site.label}}:</label>
                                     {{ form.web_site }}
                                 </div>
