--- a/templates/account/password_change.html
+++ b/templates/account/password_change.html
@@ -8,7 +8,7 @@
    
 {% block content_box_user %}
     <div class="row padding-20">
-        <div class="col-lg-4 ">
+        <div class="col-lg-4 hidden-xs">
              <ul class="list-block">
                 <li>
                     {% url 'userprofile_update' as url %}
