--- a/templates/base.html
+++ b/templates/base.html
@@ -81,6 +81,7 @@
             <ul class="list-inline navbar-right">
                 {% if user.is_authenticated %}
                     
+                {% if request.user.notifications.active.unread %}
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                         <span class="nf-count"></span>
@@ -94,6 +95,7 @@
 
                     </ul>
                 </li>
+                {% endif %}
 
                 <li class="dropdown">   
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-user"></i> {{ request.user.username }} <b class="caret"></b></a>
@@ -151,7 +153,7 @@
                 <a class="navbar-brand" href="/">
                     <img src="{% static 'assets/images/tk-small.png' %}" alt="logo togokuizine">
                 </a>
-                <ul class="list-inline navbar-right visible-sm visible-xs pull-right" style="padding-top:15px;">
+                <ul class="list-inline visible-sm visible-xs pull-right" style="padding-top:15px;">
                 {% if user.is_authenticated %}
 
                 <li class="dropdown">
@@ -167,7 +169,7 @@
                     </ul>
                 </li>
 
-                <li class="dropdown">
+                <li class="dropdown hidden-xs ">
                         
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
 
@@ -204,7 +206,7 @@
                         </li>
                     </ul>
                 {% else %}
-                    <a  href="{% url 'account_login' %}"><i class="fa fa-user"></i>&nbsp; {% trans 'Se connecter' %} </a>
+                    <a  href="{% url 'account_login' %}" class="hidden-xs "><i class="fa fa-user"></i>&nbsp; {% trans 'Se connecter' %} </a>
 
                 {% endif %}
                      </li>
@@ -256,27 +258,49 @@
                             </li>
 
 
-                            <li class="dropdown">
-                               <!--  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">A propos</a> -->
-                                <ul class="dropdown-menu">
-                                  <!--
-                                    {% get_flatpages as flatpages %}
-
-                                   {% for page in flatpages %}
-
-                                   {% endfor %} -->
-
-                                    <li><a href="{% url 'about' %}">L'équipe</a></li>
-
-                                    <hr>
-                                    <li><a href="{% url 'contributors' %}">Contributeurs</a></li>
-                                       <hr>
-                                    <li><a href="">Mentions Légales</a></li>
-
-                                </ul>
-                            </li>
+                            
 
                             <li><a href="{% url 'recipe_add' %}" {% if "/recipe/add" in request.path %} class="active"{% endif %}> Propose ta recette</a></li>
+
+                            {% if user.is_authenticated %}
+
+
+                            <li class="dropdown visible-xs">
+                                    
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+
+
+                                <i class="fa fa-user"></i>
+                                 {{ request.user.username }} <b class="caret"></b></a>
+
+                                <ul class="dropdown-menu">
+
+                                    <li>
+                                        <a href="{% url 'recipe_box_user' %}"><i class="fa fa-fw fa-gear"></i> {% trans 'Paramètres' %}</a>
+                                    </li>
+
+                                    <li>
+                                        <a href="{% url 'userprofile_update' %}"><i class="fa fa-fw fa-user" ia-hidden="true"></i>{% trans 'Modifier votre profil' %}</a>
+                                    </li>
+                                    <li>
+                                        <a href="{% url 'account_change_password' %}"><i class="fa fa-fw fa-lock" ia-hidden="true"></i>{% trans 'Mot de passe' %}</a>
+                                    </li>
+                                    {% if user.is_staff_member or user.is_staff %}
+
+                                    <li>
+                                        <a href="{% url 'stats' %}"><i class="fa fa-fw fa-dashboard" ia-hidden="true"></i> {% trans 'Dashboard' %}</a>
+                                    </li>
+                                    {% endif %}
+                                    <li class="divider"></li>
+                                    <li>
+                                        <a href="" data-toggle="modal" data-target="#logout"><i class="fa fa-fw fa-power-off" ia-hidden="true"></i> {% trans 'Se déconnecter' %}</a>
+                                    </li>
+                                </ul>
+                            {% else %}
+                                <li><a  href="{% url 'account_login' %}" class="visible-xs"><i class="fa fa-user"></i>&nbsp; {% trans 'Se connecter' %} </a></li>
+
+                            {% endif %}
+                            </li>
 
                             <li>
                                 <a href="#"  data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
@@ -331,7 +355,7 @@
 
 
                         <div class="col-sm-4 col-xs-12">
-                            <div class="single_widget wow fadeIn" data-wow-duration="800ms">
+                            <div class="single_widget wow fadeIn" data-wow-duration="400ms">
                                 <div class="footer_logo">
                                     <!-- <h2>TogoKuizine</h2> -->
 
@@ -355,7 +379,7 @@
 
 
                         <div class="col-sm-4 col-xs-12">
-                            <div class="single_widget wow fadeIn" data-wow-duration="800ms">
+                            <div class="single_widget wow fadeIn" data-wow-duration="400ms">
                                 <h4 class="footer_title">Contact</h4>
                                 <div class="separator4"></div>
                                 <ul>
@@ -369,7 +393,7 @@
                         </div>
 
                         <div class="col-sm-4  col-xs-12">
-                            <div class="single_widget wow fadeIn" data-wow-duration="800ms">
+                            <div class="single_widget wow fadeIn" data-wow-duration="400ms">
                                
                                 <h4 class="footer_title">Newsletter</h4>
                                 <div class="separator4"></div>
@@ -406,7 +430,7 @@
             <div class="main_footer">
                 <div class="row">
 
-                    <div class="col-sm-6 col-xs-12">
+                    <div class="col-sm-6 col-xs-6">
                         <div class="footer_socail">
                             <div class="copyright_text ">
                                 <p> © 2019. TogoKuizine</p>
@@ -415,7 +439,7 @@
                         
                     </div>
 
-                    <div class="col-sm-6 col-xs-12">
+                    <div class="col-sm-6 col-xs-6">
 
                         <div class="footer_socail_right">
                            
@@ -488,8 +512,10 @@
         <script src="{% static 'assets/js/wow.min.js' %}"></script>
         <script src="{% static 'ckeditor/ckeditor-init.min.js' %}"></script>
         <script src="{% static 'ckeditor/ckeditor/ckeditor.min.js' %}"></script>
+        {% include_notify_js_variables %}
         <script src="{% static 'notify/notifyX.js' %}"></script>
 
+        
         <script>
                 wow = new WOW(
                   {
@@ -565,6 +591,9 @@
                     }
 
             });
+
+
+
         </script>
         {% if messages %}
             {% for message in messages %}
