--- a/templates/notifications/notify/all.html
+++ b/templates/notifications/notify/all.html
@@ -37,19 +37,24 @@
             <div class="col-md-offset-2 col-md-8">
   
                 {% block content %}
-                   
-                    {% if request.user.notifications.active.unread  %}
+                     <button class="mark-all-notifications" data-mark-action="read">{% trans "Mark all as read" %}</button>
+                    <button class="mark-all-notifications" data-mark-action="unread">{% trans "Mark all as unread" %}</button>
+                    <ul class="notifications list-group">
+                    {% if notifications %}
+                    {% render_notifications using notifications %}
+                    {% endif %}
+                    </ul>
+                    {% if notifications.unread %}
                      <button class="btn btn-primary mark-all-notifications" data-mark-action="read">
                     {% trans "Marquer tous comme lu" %}</button>
+                    {% endif %}
                     <!-- <button class="btn btn-primary mark-all-notifications" data-mark-action="unread">{% trans "Marquer tous comme non lu" %}</button>  -->
                     <br><br>
                     <ul class="notifications notification-box-list list-group">
+                    {% if notifications %}
                     {% render_notifications using request.user.notifications.active.unread %}
-                    </ul>
-                    {%  else %}
-                    Aucune notification
                     {% endif %}
-
+                    </ul>
                 {% endblock %}
 
                 
