--- a/templates/userprofile/contributors.html
+++ b/templates/userprofile/contributors.html
@@ -46,7 +46,7 @@
                                         {% if user.profile.photo %}
                                         <img class="img-fluid" src="{{user.profile.photo.url}}" width="" alt="contributor image">
                                         {% else %}
-                                        <img src="{% static 'assets/images/user-logo.jpg' %}" class="img-fluid" width="" alt="contributor image">
+                                        <img src="{% static 'assets/images/top-chef.jpg' %}" class="img-fluid" width="" alt="contributor image">
                                         {% endif %}
 
                                     </p>
@@ -70,9 +70,9 @@
                                     <ul class="social-link list-inline">
                                         <li>
                                             {% if user.profile.facebook %}
-                                            <a href="{{user.profile.facebook}}" class="btn-floating facebook"><i class="fa fa-facebook"></i></a>
+                                            <a href="https://www.facebook.com/{{user.profile.facebook}}" class="btn-floating facebook"><i class="fa fa-facebook"></i></a>
                                             {% else %}
-                                             <a href="#" class="btn-floating facebook"><i class="fa fa-facebook"></i></a>
+                                             <a href="" class="btn-floating facebook"><i class="fa fa-facebook"></i></a>
                                             {% endif %}
                                         </li>
                                         <li>
