--- a/templates/userprofile/profile_update.html
+++ b/templates/userprofile/profile_update.html
@@ -9,7 +9,7 @@
 
 {% block content_box_user %}
     <div class="row padding-20">
-        <div class="col-lg-4 ">
+        <div class="col-lg-4  hidden-xs">
              <ul class="list-block">
                 <li>
                     {% url 'userprofile_update' as url %}
@@ -22,7 +22,7 @@
                 
             </ul>
         </div>
-        <div class="col-lg-7 content-left">    
+        <div class="col-lg-7 content-left">             
     
             <h3 class="h3-responsive text-center">Modifier mon profil</h3>
             <hr>
@@ -116,12 +116,18 @@
                             {% endif %}
                         </div>
                     </div>
+                    <div class="col-sm-6">
+                        <div class="form-group">
+                            <label>{% trans 'Profession' %}</label>
+                              {{ profile_form.job }}
+                        </div>
+                    </div>
                 </div>
 
                 <div class="row">
                     <div class="col-sm-12">
                         <div class="form-group">
-                            <label>A propos de vous</label>
+                            <label>A propos de vous (moins de 500 mots)</label>
                             {{ profile_form.bio }}
                         </div>
                     </div>
